# solanaPokerA2P

./: .gitignore  ARCHITECTURE.md  CHECKLIST.md  FILE_TREE.txt  INSTALLATION_FIX.md  PLAYER_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_USDC.md  README.md  SOLANA_INSTALL.md  TESTING.md  TESTING_GUIDE.md  USDC_POKER_GUIDE.md  deploy.sh
app/: .env.example  config-overrides.js  package.json
app/public/: index.html
app/src/: App.css  App.tsx
app/src/components/: Login.css  Login.tsx  PokerTable.css  PokerTable.tsx  WalletSetup.css  WalletSetup.tsx
app/src/config/: cognito.ts
app/src/contexts/: AuthContext.tsx  GameContext.tsx
app/src/types/: index.ts
app/src/utils/: firebase.ts  poker.ts  solana.ts
infrastructure/: .env.example  .gitignore
infrastructure/lib/: solana-poker-stack.ts
program/: Cargo.toml  client.ts
program/src/: lib.rs
scripts/: analyze-game.ts  deploy-app-only.sh  deploy-usdc-poker.sh  deploy.sh  play-full-game.ts  test-poker-usdc.ts
